--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_2_0.bundle
-Library/PackageCache/com.unity.burst@1.8.7/.Runtimelibburst-llvm-15.dylib
+Library/PackageCache/com.unity.burst@1.8.7/.Runtime/libburst-llvm-15.dylib
